// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip controlled matches snapshot when isVisible is false 1`] = `
<div>
  <div
    data-role="tooltip-target"
  >
    Target
  </div>
</div>
`;

exports[`Tooltip controlled matches snapshot when isVisible is true 1`] = `
.c0 {
  display: none;
  height: 0;
  width: 0;
}

<div>
  <div
    data-role="tooltip-target"
  >
    Target
  </div>
  <span
    class="c0"
    data-portal-entrance="guid-12345"
  />
</div>
`;
